[project]
name = "bot-binance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "pandas>=2.2.3",
    "python-binance>=1.0.28",
    "python-dotenv>=1.1.0",
    "ta>=0.11.0",
    "tabulate>=0.9.0",
    "yagmail>=0.15.293",
]
